--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
@@ -86,5 +87,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "15544c44-fae2-4280-864f-d72f6c806f1b"
   }
 }
